[gd_scene load_steps=6 format=3 uid="uid://vd5asnrxi3rx"]

[ext_resource type="StyleBox" uid="uid://b4r6ml4yts6gy" path="res://Assets/ButtonColor/GreenButtonNormal.tres" id="1_6w42e"]
[ext_resource type="Script" path="res://Home/SchoolManager/EditSubject.gd" id="1_l1ucg"]
[ext_resource type="StyleBox" uid="uid://ck1raeeejtfaw" path="res://Assets/ButtonColor/GreenButtonHover.tres" id="2_i2cwo"]
[ext_resource type="StyleBox" uid="uid://cxt3p1cqhcx1g" path="res://Assets/ButtonColor/RedButtonNormal.tres" id="3_ga47g"]
[ext_resource type="StyleBox" uid="uid://b1vp12avcsa6q" path="res://Assets/ButtonColor/RedButtonHover.tres" id="4_ccvhd"]

[node name="EditSubject" type="CenterContainer"]
custom_minimum_size = Vector2i(1400, 80)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -700.0
offset_right = 700.0
offset_bottom = 80.0
grow_horizontal = 2
script = ExtResource("1_l1ucg")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(1460, 60)
offset_top = 10.0
offset_right = 1460.0
offset_bottom = 70.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2i(1460, 20)
offset_top = 10.0
offset_right = 1460.0
offset_bottom = 70.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2i(5, 60)
offset_right = 5.0
offset_bottom = 60.0
color = Color(0.572549, 0.619608, 1, 1)

[node name="VBoxContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1000, 0)
offset_left = 9.0
offset_right = 1009.0
offset_bottom = 60.0

[node name="SubjectBox" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2i(600, 40)
offset_left = 8.0
offset_top = 10.0
offset_right = 992.0
offset_bottom = 50.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Subject" type="Label" parent="VBoxContainer/VBoxContainer/SubjectBox"]
offset_top = 7.0
offset_right = 89.0
offset_bottom = 33.0
text = "Asignatura:"

[node name="SubjectLabel" type="Label" parent="VBoxContainer/VBoxContainer/SubjectBox"]
custom_minimum_size = Vector2i(380, 0)
offset_left = 109.0
offset_top = 7.0
offset_right = 489.0
offset_bottom = 33.0
text = "INSERTE NOMBRE ASIGNATURA"
clip_text = true

[node name="Teacher" type="Label" parent="VBoxContainer/VBoxContainer/SubjectBox"]
offset_left = 509.0
offset_top = 7.0
offset_right = 584.0
offset_bottom = 33.0
text = "Profesor: "

[node name="TeacherLabel" type="Label" parent="VBoxContainer/VBoxContainer/SubjectBox"]
custom_minimum_size = Vector2i(380, 0)
offset_left = 604.0
offset_top = 7.0
offset_right = 984.0
offset_bottom = 33.0
text = "INSERTE NOMBRE DEL PROFESOR A CARGO"
clip_text = true

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(242, 60)
offset_left = 1013.0
offset_right = 1443.0
offset_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
offset_top = 10.0
offset_right = 430.0
offset_bottom = 50.0
theme_override_constants/separation = 30

[node name="EditSubject" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 40)
offset_right = 200.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("1_6w42e")
theme_override_styles/hover = ExtResource("2_i2cwo")
text = "Editar Asignatura"

[node name="DeleteSubject" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 40)
offset_left = 230.0
offset_right = 430.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("4_ccvhd")
text = "Eliminar Asignatura"

[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/EditSubject" to="." method="_on_edit_subject_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/DeleteSubject" to="." method="_on_delete_subject_pressed"]
